# fractals

./: .gitignore  CMakeLists.txt  README  README.md  fractals.sln  fractals.vcxproj  fractals.vcxproj.filters  makefile  mandelbrot.cpp  mandelbrotOrbit.cxx  nebulabrot.cpp  newton.cpp  nhImage.h  nhMandelbrot.h  nhMandelbrotOrbit.h  nhNebulabrot.h  nhNewton.h  nhOrbit.h  nhRandom.h  nhTricorn.h  tricorn.cpp
