cmake_minimum_required(VERSION 3.15)
project(fractals CXX)
set (CMAKE_CXX_STANDARD 17)

if (MSVC)
    include_directories("C:/dev/vcpkg/installed/x64-windows/include")
    link_directories("C:/dev/vcpkg/installed/x64-windows/lib")
endif()

add_executable (mandelbrot mandelbrot.cpp)
add_executable (tricorn tricorn.cpp)
add_executable (orbit mandelbrotOrbit.cxx)
add_executable (newton newton.cpp)
add_executable (nebulabrot nebulabrot.cpp)

if (MSVC)
    target_link_libraries(mandelbrot cairo.lib cairo-gobject.lib)
    target_link_libraries(tricorn cairo.lib cairo-gobject.lib)
    target_link_libraries(orbit cairo.lib cairo-gobject.lib)
    target_link_libraries(newton cairo.lib cairo-gobject.lib)
    target_link_libraries(nebulabrot cairo.lib cairo-gobject.lib)
else()
    target_link_libraries (mandelbrot cairo pthread)
    target_link_libraries (tricorn cairo pthread)
    target_link_libraries (orbit cairo pthread)
    target_link_libraries (newton cairo pthread)
    target_link_libraries (nebulabrot cairo pthread)
endif()
